--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+# Personal data
 .env
-*exe
+
+# Local catalog
 kidtracker.json
+
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, built with `go test -c`
+*.test
